# APSS

./: .gitignore  Dockerfile  README.md  TemptoAscend  config.json  get_contributors.py  pt2ckpt.py  pt2ckpttest.ipynb  pyproject.toml  requirements.txt  start_conversion.sh  划分结果.txt
.github/workflows/: update-contributors.yml
apss/: apss_run.py  options.py  run_mc.py  test.py  train_mc.py
apss/inference/: amp_utils.py  cost_het_cluster.py  cost_het_model.py  get_parameter.py  gpt划分测试-同构集群-同构模型-xby.ipynb  gpt划分测试-同构集群-异构模型-xby.ipynb  het_cluster_1704209541.txt  inference-isomorphism copy.py  inference-isomorphism.py  inference_isomorphism.py  options.py  pipe.py  pointer_network.py  reinforce_baselines.py  run_inference.py  run_inference.sh  sa.py  temp.py  temp_test.py  test.py
apss/nets/: attention_model.py  attention_model_v2.py  graph_encoder.py  test.ipynb
apss/problems/: __init__.py
apss/training/: apss_run.py  npumodify.txt  options.py  reinforce_baselines_pp.py  run_mc.py  test.ipynb  test.py  train_mc.py
apss/utils/: beam_search.py  boolmask.py  denseUniformInit.py  functions.py  lexsort.py  reinforce_loss.py
checkpoint/pp_30_16/: args.json
checkpoint/pp_30_16_v2/: pp_30_16_final.ckpt
checkpoint/pp_30_2/: args.json
checkpoint/pp_30_2_v2/: args.json  pp_30_2_final.ckpt
checkpoint/pp_30_4/: pp_30_4_final.ckpt
checkpoint/pp_30_4_v2/: args.json  pp_30_4_final.ckpt
checkpoint/pp_30_8/: args.json
docs/: training_bug.md  training_bugs.ipynb  training_guides.docx  training_guides.md
pt2ckpt/: readme.md  start_conversion.sh
(+54 files in other folders)
