[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apss"
version = "0.1.1"
description = "一种基于神经网络和启发式策略的深度学习模型分布式训练切分(3D parallelism)快速策略搜索算法"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "python>=3.7",
    "mindspore>=2.1.1", 
    "tensorboard_logger",
    "numpy", 
    "tqdm",
]

[project.urls]
"Homepage" = "https://github.com/Cheny1m/APSS"

[project.scripts]
apss_run = "script:main"

[tool.setuptools.packages.find]
exclude = ["dist*"]

[tool.wheel]
exclude = ["dist*"]